# ticker-mcp

./: .gitignore  FIXES_SUMMARY.md  README.md  pyproject.toml  server.py
.github/workflows/: ci.yml
examples/: claude-desktop-config.json
tests/: test_server.py
