[project]
name = "toolkit-mcp"
version = "0.1.0"
description = "MCP server for developer utilities"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[project.scripts]
toolkit-mcp = "server:main"

[dependencies]
mcp = { extras = ["cli"], version = ">=1.0.0" }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
