[project]
name = "toolkit-mcp"
version = "0.2.0"
description = "Meta-MCP & A2A server — build, test, and connect AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[project.scripts]
toolkit-mcp = "server:main"

[dependencies]
mcp = { extras = ["cli"], version = ">=1.0.0" }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
